// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border: 1px solid hsla(0,0%,64%,1);
  border-radius: 0.5rem;
  background-color: hsla(0,0%,98%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
  padding: 1rem 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1rem;
  width: 1rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: hsla(0,0%,25%,1);
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
}

.c4 {
  padding: 0rem 1rem;
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  visibility: visible;
  visibility: hidden;
  opacity: 0;
  height: 0;
  padding-bottom: 0;
}

.c0 {
  border: 1px solid hsla(0,0%,64%,1);
  border-radius: 0.5rem;
}

.c0 > * {
  border: 0;
}

.c0 > :not(:last-child)::after {
  content: '';
  border-bottom: 0.5px solid hsla(0,0%,64%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="article"
      >
        <div
          class="c1"
          role="article"
        >
          <div
            class="c2"
            role="heading"
          >
            <p
              classname="sc-dkzDqf c5"
              is="h6"
              role="contentinfo"
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit
            </p>
            <i
              class="c3"
              role="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c4"
            role="presentation"
          >
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
            </p>
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
            </p>
          </div>
        </div>
        <div
          class="c1"
          role="article"
        >
          <div
            class="c2"
            role="heading"
          >
            <p
              classname="sc-dkzDqf c5"
              is="h6"
              role="contentinfo"
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit
            </p>
            <i
              class="c3"
              role="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c4"
            role="presentation"
          >
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
            </p>
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
            </p>
          </div>
        </div>
        <div
          class="c1"
          role="article"
        >
          <div
            class="c2"
            role="heading"
          >
            <p
              classname="sc-dkzDqf c5"
              is="h6"
              role="contentinfo"
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit
            </p>
            <i
              class="c3"
              role="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c4"
            role="presentation"
          >
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
            </p>
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border: 1px solid hsla(0,0%,64%,1);
  border-radius: 0.5rem;
  background-color: hsla(0,0%,98%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
  padding: 1rem 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1rem;
  width: 1rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: hsla(0,0%,25%,1);
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
}

.c4 {
  padding: 0rem 1rem;
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  visibility: visible;
  visibility: hidden;
  opacity: 0;
  height: 0;
  padding-bottom: 0;
}

.c0 {
  border: 1px solid hsla(0,0%,64%,1);
  border-radius: 0.5rem;
}

.c0 > * {
  border: 0;
}

.c0 > :not(:last-child)::after {
  content: '';
  border-bottom: 0.5px solid hsla(0,0%,64%,1);
}

<div>
    <div
      class="c0"
      role="article"
    >
      <div
        class="c1"
        role="article"
      >
        <div
          class="c2"
          role="heading"
        >
          <p
            classname="sc-dkzDqf c5"
            is="h6"
            role="contentinfo"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit
          </p>
          <i
            class="c3"
            role="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c4"
          role="presentation"
        >
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
          </p>
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
          </p>
        </div>
      </div>
      <div
        class="c1"
        role="article"
      >
        <div
          class="c2"
          role="heading"
        >
          <p
            classname="sc-dkzDqf c5"
            is="h6"
            role="contentinfo"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit
          </p>
          <i
            class="c3"
            role="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c4"
          role="presentation"
        >
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
          </p>
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
          </p>
        </div>
      </div>
      <div
        class="c1"
        role="article"
      >
        <div
          class="c2"
          role="heading"
        >
          <p
            classname="sc-dkzDqf c5"
            is="h6"
            role="contentinfo"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit
          </p>
          <i
            class="c3"
            role="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c4"
          role="presentation"
        >
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
          </p>
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Panel Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border: 1px solid hsla(0,0%,25%,1);
  border-radius: 0.5rem;
  background-color: hsla(0,0%,9%,0.3);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
  padding: 1rem 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1rem;
  width: 1rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: hsla(0,0%,45%,1);
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
}

.c4 {
  padding: 0rem 1rem;
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  visibility: visible;
  visibility: hidden;
  opacity: 0;
  height: 0;
  padding-bottom: 0;
}

.c0 {
  border: 1px solid hsla(0,0%,25%,1);
  border-radius: 0.5rem;
}

.c0 > * {
  border: 0;
}

.c0 > :not(:last-child)::after {
  content: '';
  border-bottom: 0.5px solid hsla(0,0%,25%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="article"
      >
        <div
          class="c1"
          role="article"
        >
          <div
            class="c2"
            role="heading"
          >
            <p
              classname="sc-dkzDqf c5"
              is="h6"
              role="contentinfo"
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit
            </p>
            <i
              class="c3"
              role="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c4"
            role="presentation"
          >
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
            </p>
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
            </p>
          </div>
        </div>
        <div
          class="c1"
          role="article"
        >
          <div
            class="c2"
            role="heading"
          >
            <p
              classname="sc-dkzDqf c5"
              is="h6"
              role="contentinfo"
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit
            </p>
            <i
              class="c3"
              role="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c4"
            role="presentation"
          >
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
            </p>
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
            </p>
          </div>
        </div>
        <div
          class="c1"
          role="article"
        >
          <div
            class="c2"
            role="heading"
          >
            <p
              classname="sc-dkzDqf c5"
              is="h6"
              role="contentinfo"
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit
            </p>
            <i
              class="c3"
              role="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c4"
            role="presentation"
          >
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
            </p>
            <p
              class="c5"
              role="contentinfo"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border: 1px solid hsla(0,0%,25%,1);
  border-radius: 0.5rem;
  background-color: hsla(0,0%,9%,0.3);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
  padding: 1rem 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1rem;
  width: 1rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: hsla(0,0%,45%,1);
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
}

.c4 {
  padding: 0rem 1rem;
  -webkit-transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  transition: all 200ms cubic-bezier(0.075,0.82,0.165,1);
  visibility: visible;
  visibility: hidden;
  opacity: 0;
  height: 0;
  padding-bottom: 0;
}

.c0 {
  border: 1px solid hsla(0,0%,25%,1);
  border-radius: 0.5rem;
}

.c0 > * {
  border: 0;
}

.c0 > :not(:last-child)::after {
  content: '';
  border-bottom: 0.5px solid hsla(0,0%,25%,1);
}

<div>
    <div
      class="c0"
      role="article"
    >
      <div
        class="c1"
        role="article"
      >
        <div
          class="c2"
          role="heading"
        >
          <p
            classname="sc-dkzDqf c5"
            is="h6"
            role="contentinfo"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit
          </p>
          <i
            class="c3"
            role="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c4"
          role="presentation"
        >
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
          </p>
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
          </p>
        </div>
      </div>
      <div
        class="c1"
        role="article"
      >
        <div
          class="c2"
          role="heading"
        >
          <p
            classname="sc-dkzDqf c5"
            is="h6"
            role="contentinfo"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit
          </p>
          <i
            class="c3"
            role="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c4"
          role="presentation"
        >
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
          </p>
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
          </p>
        </div>
      </div>
      <div
        class="c1"
        role="article"
      >
        <div
          class="c2"
          role="heading"
        >
          <p
            classname="sc-dkzDqf c5"
            is="h6"
            role="contentinfo"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit
          </p>
          <i
            class="c3"
            role="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c4"
          role="presentation"
        >
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ullam amet pariatur ducimus exercitationem quos rem vel nulla nostrum soluta? Repellat sit quam vero! Recusandae placeat adipisci quo qui odit!
          </p>
          <p
            class="c5"
            role="contentinfo"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi explicabo id amet sed labore, ex cumque repellendus inventore quas commodi at quis aspernatur libero voluptate maiores alias ipsum ducimus!
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
